Gray-Space/src/objects/CH_RestCredentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CH_Base_Url__c</fullName>
        <label>Base Url</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ClientId__c</fullName>
        <label>clientId</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_External_Hospitals_URI__c</fullName>
        <label>External Hospitals URI</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Login_Url__c</fullName>
        <label>loginUrl</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Password__c</fullName>
        <label>Password</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>REST Credentials</label>
</CustomObject>